@@ -1,3 +1,10 @@
+Mon Feb 26 17:43:47 2024  Rob Lauer  <rlauer6@comcast.net>
+
+	* git-critic-analyze.pl: mode +x
+	* git-critic.pl
+	- add --theme
+	- .pm or .pl (not just .in)
+
 Mon Feb 26 13:42:07 2024  Rob Lauer  <rlauer6@comcast.net>
 
 	[BigBang]:
